syntax = "proto3";

package assistant;
option go_package = "github.com/qtopie/homa/gen/assistant";

// Define the first streaming service
service CopilotService {
  rpc Chat(UserRequest) returns (stream StreamResponse);

  rpc AutoComplete(UserRequest) returns (AgentResponse);
}

message UserRequest {
  string sessionId = 1;
  int32 seq = 2;
  string message = 3;
  string frontPart = 4;
  string backPart = 5;
  string filename = 6;
  string workspace = 7;
}

message AgentResponse {
  string sessionId = 1;
  int32 seq = 2;
  string content = 3;
}

message StreamResponse {
  string sessionId = 1;
  int32 seq = 2;
  string content = 3;
}
